# nixpkgs-review

./: .envrc  .gitignore  .mergify.yml  .travis.yml  LICENSE.md  README.md  bors.toml  default.nix  devshell.nix  flake.nix  pyproject.toml  setup.cfg  setup.py  shell.nix  treefmt.nix
.github/workflows/: release.yml  test.yml  update-flake-inputs.yml
nix_review/: __init__.py  app.py  builddir.py  buildenv.py  cli.py  github.py  nix.py  report.py  review.py  utils.py  worktree.py
nix_review/cli/: __init__.py  pr.py  rev.py  wip.py
nix_review/nix/: evalAttrs.nix
nix_review/tests/: __init__.py  cli_mocks.py  test_app.py  test_cli.py  test_pr_borg_eval.py  test_pr_local_eval.py  test_rev.py  test_wip.py
nix_review/tests/assets/: github-pull-37200-statuses.json  github-pull-37200.json
nixpkgs_review/: __init__.py  allow.py  builddir.py  buildenv.py  errors.py  eval_ci.py  git.py  github.py  http_requests.py  nix.py  nixpkgs.py  overlay.py  report.py  review.py  utils.py
nixpkgs_review/cli/: __init__.py  approve.py  branch.py  comments.py  merge.py  post_result.py  pr.py  rev.py  utils.py  wip.py
nixpkgs_review/nix/: checkCommands.nix  evalAttrs.nix  parallel-eval.nix  review-shell.nix
nixpkgs_review/tests/: cli_mocks.py  test_github_actions.py  test_pr_borg_eval.py  test_pr_local_eval.py  test_report.py  test_rev.py  test_wip.py
nixpkgs_review/tests/assets/: expected_pr_report_1234.md  gist-37200.txt  package_list_after.txt
tests/: conftest.py  test_allow.py  test_bare.py  test_branch.py  test_escape_attr.py  test_github_actions.py  test_nixpkgs.py  test_pr.py  test_rev.py  test_wip.py
tests/assets/: gist-37200.txt  github-pull-1.json
tests/assets/nixpkgs/: .gitignore  config.nix.in  default.nix
tests/assets/nixpkgs/nixos/: release.nix
tests/assets/test_pr_github_action_eval/: comparison-changed-paths.json  github-artifacts-363128.json  github-pull-363128.json  github-workflows-363128.json
tests/assets/test_pr_ofborg_eval/: github-pull-37200.json  github-workflows-37200.json
tests/snapshots/test_branch/test_branch_parse_args/: parse_args.txt
