[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nixpkgs-review"
description = "Review nixpkgs pull requests"
version = "2.10.2"
authors = [{ name = "Jörg Thalheim", email = "joerg@thalheim.io" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.6",
]

[project.urls]
Homepage = "https://github.com/Mic92/nixpkgs-review"

[project.scripts]
nixpkgs-review = "nixpkgs_review:main"
nix-review = "nixpkgs_review:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
nixpkgs_review = ["nix/*.nix"]


[tool.ruff]
line-length = 88

select = ["E", "F", "I", "U", "N"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
# Missing type parameters for generic type "CaptureFixture"  [type-arg]
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pylint.FORMAT]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    # Annoying.
    "line-too-long",

    # Too many missing docstrings.
    "missing-docstring",

    # Not very important, maybe fix in the future.
    "invalid-name",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
]
