[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nixpkgs-review"
description = "Review nixpkgs pull requests"
version = "2.12.0"
authors = [{ name = "Jörg Thalheim", email = "joerg@thalheim.io" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.6",
]

[project.urls]
Homepage = "https://github.com/Mic92/nixpkgs-review"

[project.scripts]
nixpkgs-review = "nixpkgs_review:main"
nix-review = "nixpkgs_review:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
nixpkgs_review = ["nix/*.nix"]


[tool.ruff]
target-version = "py312"
line-length = 88

lint.select = ["E", "F", "I", "U", "N"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.mypy]
python_version = "3.12"
strict = true
no_implicit_optional = true
# Missing type parameters for generic type "CaptureFixture"  [type-arg]
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "argcomplete"
ignore_missing_imports = true

[tool.pylint.FORMAT]
output-format = "colorized"

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    # Annoying.
    "line-too-long",

    # Too many missing docstrings.
    "missing-docstring",

    # Not very important, maybe fix in the future.
    "invalid-name",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
]
